--- a/bow_classifier_with_embeddings.ipynb
+++ b/bow_classifier_with_embeddings.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'text': \"I started to watch this movie expecting nothing, just another movie to watch, but since the first twenty minutes, the artwork and main character, who is enigmatic, doesn't talk much, really got me in this movie.  I really liked this movie, it was dark, beautifully acted and really touching. It's a bit slow but the immersion was complete. The directing was awesome by letting us know bits by bits the story leading to the conviction of Joey and his life behind bars. The music was really great and very well incorporated into the scenes. The ending was unexpected with a twist I didn't see coming. It's not the kind of movie we see often.\", 'class': 'pos'}\n",
-      "[\"I started to watch this movie expecting nothing, just another movie to watch, but since the first twenty minutes, the artwork and main character, who is enigmatic, doesn't talk much, really got me in this movie.  I really liked this movie, it was dark, beautifully acted and really touching. It's a bit slow but the immersion was complete. The directing was awesome by letting us know bits by bits the story leading to the conviction of Joey and his life behind bars. The music was really great and very well incorporated into the scenes. The ending was unexpected with a twist I didn't see coming. It's not the kind of movie we see often.\", 'I firstly and completely and confidently disagree with the user who calls this a \\\\spoof\\\\\". Crispin Glover is very serious about his film. He personally introduced the film at the screening I saw in Chicago. He had worked on the film for years and it is the first in an intended trilogy. \\\\\"What is it?\\\\\" is Crispin Glover\\'s attempt at an art film in the vein of those he idolizes by Herzog, Lynch etc.  I had heard rumor of this film years ago \\\\\"epic porno movie with all down-syndrome cast directed by crispin glover\\\\\". When it finally came out i watched the trailer on-line and read the synopsis and i was foaming at the mouth with anticipation. ...I went to chicago to see it and it was a major disappointment. If he took out the goofy sh*t, such as the pot-smoking grandma, and the dancing dolls, he would be left with something much better, but only about 10 minutes long.  In other words just watch the trailer, be entertained, and leave it at that. There are some striking images and fantastic juxtapositions and phrases, but its lack of focus amounts to disappointment.\"']\n",
+      "{'class': 'pos', 'text': 'In the early 1970s, many of us who had embraced hippy/acid/alternative culture wholeheartedly, had realised that mainstream society was not going to change in the way we thought it would. For me this film defined the tension of \\\\now what?\\\\\" that many of the people I knew felt at that time. Do we head for the commune and create our own vision of utopia or do we radicalize and push for change?  From the futile gestures to police, the radical rhetoric, the music of Pink Floyd, to the love-making and the explosive images in the desert - so much is in there. It captures well a significant moment in time.\"'}\n",
+      "['In the early 1970s, many of us who had embraced hippy/acid/alternative culture wholeheartedly, had realised that mainstream society was not going to change in the way we thought it would. For me this film defined the tension of \\\\now what?\\\\\" that many of the people I knew felt at that time. Do we head for the commune and create our own vision of utopia or do we radicalize and push for change?  From the futile gestures to police, the radical rhetoric, the music of Pink Floyd, to the love-making and the explosive images in the desert - so much is in there. It captures well a significant moment in time.\"', \"...the first film I had to walk out on. And it was the cast and crew pre-screening (Not that I was involved, I hasten to add). I made it through the first hour, so I reckon I'm just qualified to comment, but that was my limit.  Like other comments here, how did this get through any kind of QA. An accumulation of the very worst in dialogue, the epitome of wooden acting, awful casting, all wrapped together without a plot.  Tara Fitzgerald's casting was bizarre, almost comic. She possesses the worst Russian accent in movie history.  As I left the screening, the director and producers were drinking in a bar outside the cinema. They obviously couldn't sit through it again either.  \"]\n",
       "['pos', 'neg']\n"
      ]
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['started', 'to', 'watch', 'this', 'movie', 'expecting', 'nothing', 'just', 'another', 'movie', 'to', 'watch', 'but', 'since', 'the', 'first', 'twenty', 'minutes', 'the', 'artwork', 'and', 'main', 'character', 'who', 'is', 'enigmatic', 'doesn', 'talk', 'much', 'really', 'got', 'me', 'in', 'this', 'movie', 'really', 'liked', 'this', 'movie', 'it', 'was', 'dark', 'beautifully', 'acted', 'and', 'really', 'touching', 'It', 'bit', 'slow', 'but', 'the', 'immersion', 'was', 'complete', 'The', 'directing', 'was', 'awesome', 'by', 'letting', 'us', 'know', 'bits', 'by', 'bits', 'the', 'story', 'leading', 'to', 'the', 'conviction', 'of', 'Joey', 'and', 'his', 'life', 'behind', 'bars', 'The', 'music', 'was', 'really', 'great', 'and', 'very', 'well', 'incorporated', 'into', 'the', 'scenes', 'The', 'ending', 'was', 'unexpected', 'with', 'twist', 'didn', 'see', 'coming', 'It', 'not', 'the', 'kind', 'of', 'movie', 'we', 'see', 'often']\n"
+      "['In', 'the', 'early', '1970s', 'many', 'of', 'us', 'who', 'had', 'embraced', 'hippy', 'acid', 'alternative', 'culture', 'wholeheartedly', 'had', 'realised', 'that', 'mainstream', 'society', 'was', 'not', 'going', 'to', 'change', 'in', 'the', 'way', 'we', 'thought', 'it', 'would', 'For', 'me', 'this', 'film', 'defined', 'the', 'tension', 'of', 'now', 'what', 'that', 'many', 'of', 'the', 'people', 'knew', 'felt', 'at', 'that', 'time', 'Do', 'we', 'head', 'for', 'the', 'commune', 'and', 'create', 'our', 'own', 'vision', 'of', 'utopia', 'or', 'do', 'we', 'radicalize', 'and', 'push', 'for', 'change', 'From', 'the', 'futile', 'gestures', 'to', 'police', 'the', 'radical', 'rhetoric', 'the', 'music', 'of', 'Pink', 'Floyd', 'to', 'the', 'love', 'making', 'and', 'the', 'explosive', 'images', 'in', 'the', 'desert', 'so', 'much', 'is', 'in', 'there', 'It', 'captures', 'well', 'significant', 'moment', 'in', 'time']\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +149,7 @@
      "text": [
       "Words in vocabulary: 111151\n",
       "Vectorized data shape: (25000,)\n",
-      "Firs example vectorized: [416, 49412, 1187, 25, 1081, 3339, 740, 70, 183, 1081, 49412, 1187, 30, 131, 10, 51, 7392, 424, 10, 9830, 49413, 795, 1929, 28, 4, 30515, 49414, 808, 139, 213, 179, 157, 1, 25, 1081, 213, 3903, 25, 1081, 14, 9, 2789, 13220, 5281, 49413, 213, 8267, 46, 705, 1754, 30, 10, 27730, 9, 889, 6, 7864, 9, 5981, 17, 4750, 152, 163, 9896, 17, 9896, 10, 520, 430, 49412, 10, 4291, 49415, 11044, 49413, 23, 239, 446, 4921, 6, 603, 9, 213, 247, 49413, 129, 104, 8078, 64, 10, 3887, 6, 1966, 9, 5137, 7, 7977, 49416, 146, 443, 46, 12, 10, 593, 49415, 1081, 34, 146, 606]\n"
+      "Firs example vectorized: [65, 10, 262, 49412, 122, 49413, 152, 28, 31, 8427, 49414, 14932, 2116, 1983, 31886, 31, 49415, 3, 5220, 1928, 9, 12, 116, 49416, 399, 1, 10, 123, 34, 542, 14, 42, 178, 157, 25, 659, 3634, 10, 6551, 49413, 90, 76, 3, 122, 49413, 10, 63, 1001, 1002, 11, 3, 54, 813, 34, 349, 2, 10, 46989, 49417, 778, 66, 231, 2602, 49413, 49418, 26, 53, 34, 49419, 49417, 1634, 2, 399, 1202, 10, 20306, 14409, 49416, 174, 10, 5975, 8014, 10, 603, 49413, 15059, 8931, 49416, 10, 713, 297, 49417, 10, 6733, 2589, 1, 10, 6667, 78, 139, 4, 1, 67, 46, 12679, 104, 789, 1282, 1, 54]\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -187,11 +187,11 @@
      "output_type": "stream",
      "text": [
       "class_numbers shape= (25000,)\n",
-      "class_numbers [1 0 0 ... 1 1 1]\n",
+      "class_numbers [1 0 1 ... 1 1 1]\n",
       "class labels ['neg' 'pos']\n",
       "classes_1hot [[0. 1.]\n",
       " [1. 0.]\n",
-      " [1. 0.]\n",
+      " [0. 1.]\n",
       " ...\n",
       " [0. 1.]\n",
       " [0. 1.]\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -271,35 +271,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New shape: (25000, 100)\n",
+      "New shape: (25000, 2366)\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 100)               0         \n",
+      "input_12 (InputLayer)        (None, 2366)              0         \n",
       "_________________________________________________________________\n",
-      "embedding_1 (Embedding)      (None, 100, 200)          22230200  \n",
+      "embedding_12 (Embedding)     (None, 2366, 200)         22230200  \n",
       "_________________________________________________________________\n",
-      "average_pooling1d_1 (Average (None, 1, 200)            0         \n",
+      "lambda_5 (Lambda)            (None, 200)               0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 200)               0         \n",
+      "activation_4 (Activation)    (None, 200)               0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 2)                 402       \n",
+      "dense_5 (Dense)              (None, 2)                 402       \n",
       "=================================================================\n",
       "Total params: 22,230,602\n",
       "Trainable params: 22,230,602\n",
@@ -308,18 +301,21 @@
       "None\n",
       "Train on 22500 samples, validate on 2500 samples\n",
       "Epoch 1/1\n",
-      "22500/22500 [==============================] - 78s 3ms/step - loss: 0.5756 - acc: 0.7451 - val_loss: 0.4519 - val_acc: 0.8092\n"
+      "22500/22500 [==============================] - 115s 5ms/step - loss: 0.6456 - acc: 0.6564 - val_loss: 0.5355 - val_acc: 0.8424\n"
      ]
     }
    ],
    "source": [
     "from keras.models import Model\n",
-    "from keras.layers import Input, Dense, Embedding, Flatten\n",
-    "from keras.layers.pooling import AveragePooling1D\n",
+    "from keras.layers import Input, Dense, Embedding, Activation\n",
+    "from keras import backend as K\n",
+    "from keras.layers.core import Lambda\n",
     "\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
     "\n",
-    "vectorized_data_padded=pad_sequences(vectorized_data, maxlen=100, padding='post', truncating='post')\n",
+    "\n",
+    "\n",
+    "vectorized_data_padded=pad_sequences(vectorized_data)#, maxlen=100, padding='post', truncating='post')\n",
     "print(\"New shape:\", vectorized_data_padded.shape)\n",
     "example_count,sequence_len=vectorized_data_padded.shape\n",
     "example_count,class_count=classes_1hot.shape\n",
@@ -328,12 +324,13 @@
     "\n",
     "#example_count,class_count=classes_1hot.shape\n",
     "\n",
+    "\n",
     "inp=Input(shape=(sequence_len,))\n",
-    "embeddings=Embedding(len(vocabulary),200)(inp)\n",
-    "pooling=AveragePooling1D(pool_size=sequence_len)(embeddings)\n",
-    "flattened=Flatten()(pooling) # removes extra dimension\n",
-    "#hidden=Dense(200, activation=\"tanh\")(flattened)\n",
-    "outp=Dense(class_count,activation=\"softmax\")(flattened)\n",
+    "embeddings=Embedding(len(vocabulary),200,mask_zero=True)(inp)\n",
+    "sums=Lambda(lambda s: K.sum(s, axis=1), output_shape=lambda s: (s[0],s[2]))(embeddings) # custom layer to sum all embeddings\n",
+    "tanh=Activation(\"tanh\")(sums)\n",
+    "\n",
+    "outp=Dense(class_count,activation=\"softmax\")(tanh)\n",
     "model=Model(inputs=[inp], outputs=[outp])\n",
     "model.compile(optimizer=\"adam\",loss=\"categorical_crossentropy\",metrics=['accuracy'])\n",
     "\n",
