--- a/bow_classifier-reuters.ipynb
+++ b/bow_classifier-reuters.ipynb
@@ -6,7 +6,14 @@
    "source": [
     "# Bag-of-words document classification\n",
     "\n",
-    "What will happen on Reuters?"
+    "What will happen on Reuters?\n",
+    "\n",
+    "* How to read the original Reuters data in: [read_news.ipynb](read_news.ipynb)\n",
+    "* Reuters news with about 10000 news articles classified into 66 classes\n",
+    "* We only keep classes with at least 5 examples, end up with 51 classes\n",
+    "* How well can we do on a 51-class classification problem with our BoW?\n",
+    "\n",
+    "This is the exact same code as in the original bag-of-words, just file names changed:"
    ]
   },
   {
