added more details on jupyter

--- a/running_code.ipynb
+++ b/running_code.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can run and edit the code either on the classroom computers, your own laptop or on the course server. Preferably in that order, so there will not be huge traffic on the server, causing insanely long training times."
+    "You can run and edit the code either on the classroom computers, your own laptop or on the course server. Preferably in that order, so there will not be huge traffic on the server, causing long training times."
    ]
   },
   {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On windows you need to do the port forwarding through PuTTY."
+    "On windows you need to do the port forwarding through PuTTY. This is done in connection settings / SSH / tunnels. There you want to add a tunnel whose source port is your port number and the target is `localhost:your-port-number`. Remember to press `add` and remember to save the settings."
    ]
   },
   {
@@ -131,7 +131,7 @@
    "metadata": {},
    "source": [
     "Now you can clone the course github repository using above commands.\n",
-    "Run the jupyter using your random port:"
+    "Run jupyter using your random port:"
    ]
   },
   {
@@ -141,6 +141,13 @@
    "outputs": [],
    "source": [
     "jupyter notebook --port YOURPORTNUMBERHERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will now run jupyter on the course server, and (through the ssh tunneling) you can access it from your local browser on the address given in the jupyter output."
    ]
   }
  ],
