Fixed the title and first paragraph for the CNN filter interpretation slides

--- a/cnn_filters.ipynb
+++ b/cnn_filters.ipynb
@@ -6,11 +6,10 @@
     "scrolled": true
    },
    "source": [
-    "# Bag-of-words classifier with pretrained word embeddings\n",
+    "# Interpreting Convolutional Kernels\n",
     "\n",
-    "- If we have a trained word embeddings model, we can transfer that knowledge into a new task and model\n",
-    "- Initialize the weights in the classifier with pretrained word embeddings\n",
-    "- Word embeddings downloaded at https://s3-us-west-1.amazonaws.com/fasttext-vectors/wiki-news-300d-1M.vec.zip\n",
+    "This example shows how to analyze kernel activations for given input texts or with hypothetical word sequences.\n",
+    "The example is based on our previous IMDB movie review sentiment classification notes. The relevant information starts from the NN model definition, reading the data and pretrained word embeddings is identical/similar to what we have seen previously.\n",
     "\n",
     "### Read data"
    ]
