NER project description

--- a/project_ner.ipynb
+++ b/project_ner.ipynb
@@ -89,9 +89,22 @@
     "## 2. Expand context\n",
     "Modify your network in such way that it is able to utilize the surrounding context of the word. This can be done for instance with a convolutional or recurrent layer (recurrent neural networks will be discussed later).\n",
     "Analyze different neural network architectures and hyperparameters. How does utilizing the surrounding context influence the predictions.\n",
-    "## 3. Analyze the convolutional kernels (optional)\n",
-    "Using the example codes shown during the lectures, analyze where your convolutional kernels are activating. Are the any clear person name related kernels etc.?"
+    "## 3. Analyze false positive predictions\n",
+    "Look at the entities your model is predicting, but which are not present in the gold standard data. Can you see any patterns in the misclassifications? Do the predicted entities share some similarities with the real entities?\n",
+    "\n",
+    "## 4. Analyze the convolutional kernels\n",
+    "Using the example codes shown during the lectures, analyze where your convolutional kernels are activating. Are the any clear person name related kernels etc.?\n",
+    "\n",
+    "## 5. Add character level information to your model\n",
+    "Add a convolutional layer which reads words as character sequences. Concatenate this information with the word embeddings before feeding them into the other existing layers you have created in your model architecture.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
