Milestones for NER project

--- a/project_ner.ipynb
+++ b/project_ner.ipynb
@@ -82,21 +82,21 @@
    "metadata": {},
    "source": [
     "# Your task\n",
-    "## 1. Predicting word labels independently\n",
+    "## 1.1 Predicting word labels independently\n",
     "The first part is to train a classifier which assigns a label for each given input word independently. Evaluate the results on token level and entity level.\n",
     "Report your results with different network hyperparameters.\n",
     "Also discuss whether the token level accuracy is a reasonable metric. How do the pretrained word embeddings influence your predictions?\n",
-    "## 2. Expand context\n",
+    "## 1.2 Expand context\n",
     "Modify your network in such way that it is able to utilize the surrounding context of the word. This can be done for instance with a convolutional or recurrent layer (recurrent neural networks will be discussed later).\n",
     "Analyze different neural network architectures and hyperparameters. How does utilizing the surrounding context influence the predictions.\n",
-    "## 3. Analyze false positive predictions\n",
+    "## 2.1 Analyze false positive predictions\n",
     "Look at the entities your model is predicting, but which are not present in the gold standard data. Can you see any patterns in the misclassifications? Do the predicted entities share some similarities with the real entities?\n",
     "\n",
-    "## 4. Analyze the convolutional kernels\n",
+    "## 2.2 Analyze the convolutional kernels\n",
     "Using the example codes shown during the lectures, analyze where your convolutional kernels are activating. Are the any clear person name related kernels etc.?\n",
     "\n",
-    "## 5. Add character level information to your model\n",
-    "Add a convolutional layer which reads words as character sequences. Concatenate this information with the word embeddings before feeding them into the other existing layers you have created in your model architecture.\n"
+    "## 3. Add character level information to your model\n",
+    "Add a convolutional layer which reads words as character sequences. Concatenate this information with the word embeddings before feeding them into the other existing layers you have created in your model architecture. \n"
    ]
   },
   {
