Milestones for NER

--- a/project_ner.ipynb
+++ b/project_ner.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your task\n",
+    "# Milestones\n",
     "## 1.1 Predicting word labels independently\n",
     "The first part is to train a classifier which assigns a label for each given input word independently. Evaluate the results on token level and entity level.\n",
     "Report your results with different network hyperparameters.\n",
