Template for NER stuff

--- a/read_ner.ipynb
+++ b/read_ner.ipynb
@@ -36,14 +36,14 @@
     "                data = line.strip().split()\n",
     "                # Data format is <token> <pos> <chunk> <ner>\n",
     "                sentence_tokens.append(data[0])\n",
-    "                sentence_tags.append(data[3].replace('I-MISC', 'O').replace('B-MISC', 'O')) # Lets ignore MISC class\n",
+    "                sentence_tags.append(data[3].replace('I-MISC', 'O').replace('B-MISC', 'O').replace('B-', 'I-')) # Lets ignore MISC class\n",
     "    with open(out_path, 'w') as output_file:\n",
     "        json.dump(sentences, output_file, indent=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
