--- a/ner.ipynb
+++ b/ner.ipynb
@@ -1860,11 +1860,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Bidirectional LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_9 (InputLayer)         (None, 113)               0         \n",
+      "_________________________________________________________________\n",
+      "embedding_9 (Embedding)      (None, 113, 300)          15000600  \n",
+      "_________________________________________________________________\n",
+      "bidirectional_2 (Bidirection (None, 113, 200)          320800    \n",
+      "_________________________________________________________________\n",
+      "time_distributed_10 (TimeDis (None, 113, 4)            804       \n",
+      "=================================================================\n",
+      "Total params: 15,322,204\n",
+      "Trainable params: 321,604\n",
+      "Non-trainable params: 15,000,600\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "Epoch 1/10\n",
+      "14000/14041 [============================>.] - ETA: 0s - loss: 3.9394\n",
+      "Precision/Recall/F-score: 0.553005284015852 / 0.16723259762308998 / 0.2568054597040104\n",
+      "14041/14041 [==============================] - 307s 22ms/step - loss: 3.9332\n",
+      "Epoch 2/10\n",
+      "14000/14041 [============================>.] - ETA: 0s - loss: 1.6082\n",
+      "Precision/Recall/F-score: 0.7410719371190978 / 0.6497053830020972 / 0.6923875156320677\n",
+      "14041/14041 [==============================] - 302s 22ms/step - loss: 1.6067\n",
+      "Epoch 3/10\n",
+      "14000/14041 [============================>.] - ETA: 0s - loss: 1.0547\n",
+      "Precision/Recall/F-score: 0.7721611339830111 / 0.7398881454109657 / 0.755680224403927\n",
+      "14041/14041 [==============================] - 313s 22ms/step - loss: 1.0544\n",
+      "Epoch 4/10\n",
+      "14000/14041 [============================>.] - ETA: 0s - loss: 0.8725\n",
+      "Precision/Recall/F-score: 0.8005074039556798 / 0.7720463397583142 / 0.7860193187595322\n",
+      "14041/14041 [==============================] - 309s 22ms/step - loss: 0.8726\n",
+      "Epoch 5/10\n",
+      "14000/14041 [============================>.] - ETA: 0s - loss: 0.7830\n",
+      "Precision/Recall/F-score: 0.8390600753713146 / 0.7560171776690303 / 0.7953769372209087\n",
+      "14041/14041 [==============================] - 303s 22ms/step - loss: 0.7830\n",
+      "Epoch 6/10\n",
+      "14000/14041 [============================>.] - ETA: 0s - loss: 0.7187\n",
+      "Precision/Recall/F-score: 0.8150225884922802 / 0.8197842804354339 / 0.817396499788394\n",
+      "14041/14041 [==============================] - 310s 22ms/step - loss: 0.7187\n",
+      "Epoch 7/10\n",
+      "14000/14041 [============================>.] - ETA: 0s - loss: 0.6454\n",
+      "Precision/Recall/F-score: 0.8186697335633506 / 0.8530909817237591 / 0.8355259940333545\n",
+      "14041/14041 [==============================] - 294s 21ms/step - loss: 0.6451\n",
+      "Epoch 8/10\n",
+      "14000/14041 [============================>.] - ETA: 0s - loss: 0.6082\n",
+      "Precision/Recall/F-score: 0.846301965043942 / 0.8559372815340058 / 0.8510923535253228\n",
+      "14041/14041 [==============================] - 293s 21ms/step - loss: 0.6080\n",
+      "Epoch 9/10\n",
+      "14000/14041 [============================>.] - ETA: 0s - loss: 0.5637\n",
+      "Precision/Recall/F-score: 0.8426138304621541 / 0.8621791670827924 / 0.8522842263741146\n",
+      "14041/14041 [==============================] - 287s 20ms/step - loss: 0.5635\n",
+      "Epoch 10/10\n",
+      "14000/14041 [============================>.] - ETA: 0s - loss: 0.5339\n",
+      "Precision/Recall/F-score: 0.8661366459627329 / 0.8704184560071907 / 0.8682722721725485\n",
+      "14041/14041 [==============================] - 288s 21ms/step - loss: 0.5340\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp=Input(shape=(sequence_len,))\n",
+    "embeddings=Embedding(len(vocabulary), vector_size, mask_zero=True, trainable=False, weights=[pretrained])(inp)\n",
+    "rnn = Bidirectional(LSTM(100, activation='tanh', return_sequences=True))(embeddings)\n",
+    "outp=TimeDistributed(Dense(class_count, activation=\"softmax\"))(rnn)\n",
+    "model=Model(inputs=[inp], outputs=[outp])\n",
+    "\n",
+    "optimizer=Adam(lr=0.001) # define the learning rate\n",
+    "model.compile(optimizer=optimizer,loss=\"sparse_categorical_crossentropy\", sample_weight_mode='temporal')\n",
+    "\n",
+    "print(model.summary())\n",
+    "\n",
+    "# train\n",
+    "hist=model.fit(vectorized_data_padded,vectorized_labels_padded, sample_weight=weights, batch_size=100,verbose=1,epochs=10, callbacks=[EvaluateEntities()])"
+   ]
   }
  ],
  "metadata": {
